# epos_ros2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
epos_ros2/: CMakeLists.txt  package.xml
epos_ros2/config/: ft_config.yaml  ft_config_g.yaml  logitech1.config.yaml
epos_ros2/include/epos_ros2/: EPOSCcommand.h  EPOSParams.hpp  EPOSUtils.hpp  EPOSWrapper.hpp  MotorInterface.hpp  ROSNodeParams.hpp
epos_ros2/include/epos_ros2/interface/: EPOSBasicInterface.hpp
epos_ros2/include/epos_ros2/utils/: EPOSParams.hpp  EPOSUtils.hpp
epos_ros2/install_files/: install_epos_cmd_lib.bash
epos_ros2/launch/: ftr_launch.py
epos_ros2/launch/epos/: epos_ft.launch  epos_ft_test.launch
epos_ros2/msg/: MotorCommands.msg
epos_ros2/src/: EPOSWrapper.cpp  MotorInterface.cpp  epos_interface_node.cpp
epos_ros2/src/EPOSWrapper/: configuration.cpp  error_log.cpp  initialization.cpp  operation.cpp  utils.cpp
epos_ros2/src/epos_cmd/: EPOSWrapper.cpp  MotorInterface.cpp  epos_FSM_node.cpp
epos_ros2/src/interface/: EPOSBasicInterface.cpp
epos_ros2/src/roverKinematics/: eposMotorController.cpp
epos_ros2/src/utils/: epos_param_server.cpp
epos_ros2/src/wrapper/: EPOSWrapper.cpp  error_log.cpp  initialization.cpp
epos_ros2_msgs/: CMakeLists.txt  package.xml
epos_ros2_msgs/msg/: MotorCommand.msg  MotorCommands.msg
include/epos_ros/: MotorInterface.hpp  epos_command.h
install/: local_setup.sh  setup.sh
install/epos_ros2/lib/epos_ros2/: epos_interface_node
install/epos_ros2/share/epos_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/epos_ros2/share/epos_ros2/cmake/: epos_ros2Config.cmake
install/epos_ros2_msgs/include/epos_ros2_msgs/msg/: motor_command.h  motor_command.hpp  motor_commands.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/epos_ros2_msgs/include/epos_ros2_msgs/msg/detail/: motor_command__functions.c  motor_command__functions.h  motor_command__rosidl_typesupport_fastrtps_c.h  motor_command__rosidl_typesupport_fastrtps_cpp.hpp  motor_command__rosidl_typesupport_introspection_cpp.hpp  motor_command__struct.h  motor_command__traits.hpp  motor_command__type_support.cpp  motor_commands__functions.c  motor_commands__rosidl_typesupport_introspection_cpp.hpp  motor_commands__struct.hpp  motor_commands__type_support.h
install/epos_ros2_msgs/share/epos_ros2_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/epos_ros2_msgs/share/epos_ros2_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  epos_ros2_msgs__rosidl_generator_cExport-noconfig.cmake  epos_ros2_msgs__rosidl_generator_cExport.cmake  epos_ros2_msgs__rosidl_generator_cppExport.cmake  epos_ros2_msgs__rosidl_typesupport_cExport.cmake  epos_ros2_msgs__rosidl_typesupport_cppExport-noconfig.cmake  epos_ros2_msgs__rosidl_typesupport_introspection_cExport.cmake  epos_ros2_msgs__rosidl_typesupport_introspection_cppExport.cmake
install_files/: install_epos_cmd_lib.bash
launch/epos/: epos_urc.launch  urc_drive.launch
launch/joy/: local_twist_joy.launch
log/: latest_build
src/EPOS_CMD/: epos_FSM_node.cpp  epos_cmd.cpp  epos_command.cpp  epos_hardcode_test_node.cpp  epos_test_node.cpp
src/direct_control/: ft_test_control.cpp
src/epos_cmd/: EPOSCommand.cpp  epos_FSM_node.cpp  epos_command.cpp  epos_test_node.cpp
src/roverKinematics/: URC_drive_conversion_node.cpp
